some collection string translation added

--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_mainprofile.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_mainprofile.xml
@@ -12,77 +12,85 @@
         android:background="#fff"
         android:fitsSystemWindows="true">
 
-        <RelativeLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
-            <View
-                android:id="@+id/view_id"
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:background="@color/app_nav_bg" />
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/transparent"
-                android:minHeight="?attr/actionBarSize"
-                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
-                app:theme="@style/ToolbarTheme"
-                app:titleTextAppearance="@style/ToolbarTheme.Title">
+                app:layout_collapseMode="parallax"
+                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
 
-                <RelativeLayout
-                    android:id="@+id/toolbarRelativeLayout"
+                <View
+                    android:id="@+id/view_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:background="@color/app_nav_bg" />
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="visible">
+                    android:background="@color/transparent"
+                    android:minHeight="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
+                    app:theme="@style/ToolbarTheme"
+                    app:titleTextAppearance="@style/ToolbarTheme.Title">
 
-                    <com.mycity4kids.widget.CustomFontTextView
-                        android:id="@+id/toolbarTitle"
-                        android:layout_width="wrap_content"
+                    <RelativeLayout
+                        android:id="@+id/toolbarRelativeLayout"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="@string/app_settings.tabbar.edit_profile"
-                        android:textColor="@color/app_light_black"
-                        android:textSize="20sp"
-                        app:fontName="oswald_regular.ttf" />
+                        android:visibility="visible">
 
-                </RelativeLayout>
-            </androidx.appcompat.widget.Toolbar>
+                        <com.mycity4kids.widget.CustomFontTextView
+                            android:id="@+id/toolbarTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:text="@string/app_settings.tabbar.edit_profile"
+                            android:textColor="@color/app_light_black"
+                            android:textSize="20sp"
+                            app:fontName="oswald_regular.ttf" />
 
-            <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/id_toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize"-->
-            <!--android:background="@color/transparent"-->
-            <!--app:layout_scrollFlags="scroll|enterAlwaysCollapsed"-->
-            <!--app:titleTextColor="#fff" />-->
+                    </RelativeLayout>
+                </androidx.appcompat.widget.Toolbar>
 
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:id="@+id/profileImageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="70dp"
-                android:src="@drawable/family_xxhdpi"
-                app:civ_border_color="@color/app_red"
-                app:civ_border_width="2dp" />
+                <!--<android.support.v7.widget.Toolbar-->
+                <!--android:id="@+id/id_toolbar"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="?attr/actionBarSize"-->
+                <!--android:background="@color/transparent"-->
+                <!--app:layout_scrollFlags="scroll|enterAlwaysCollapsed"-->
+                <!--app:titleTextColor="#fff" />-->
 
-            <ImageView
-                android:id="@+id/editImageView"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignRight="@+id/profileImageView"
-                android:layout_alignParentBottom="true"
-                android:background="@drawable/profile_camera_circle"
-                android:padding="12dp"
-                android:src="@drawable/ic_camera"
-                android:tint="@color/white" />
-        </RelativeLayout>
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/profileImageView"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="70dp"
+                    android:src="@drawable/family_xxhdpi"
+                    app:civ_border_color="@color/app_red"
+                    app:civ_border_width="2dp" />
 
+                <ImageView
+                    android:id="@+id/editImageView"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignEnd="@id/profileImageView"
+                    android:layout_alignParentBottom="true"
+                    android:background="@drawable/profile_camera_circle"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_camera"
+                    android:tint="@color/white" />
+            </RelativeLayout>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/id_tabs"
