--- a/MyCity4Kids/MyCity4Kids/res/layout/dynamic_child_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/dynamic_child_view.xml
@@ -9,7 +9,8 @@
         android:id="@+id/linearKidsEmptyView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/space_13">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,9 +24,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
                 android:text="@string/rewards_kid_detail"
-                android:textAllCaps="true"
-                android:textColor="@color/app_grey"
-                app:fontName="oswald_regular.ttf"
+                android:textColor="@color/campaign_expired_background"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,11 +40,11 @@
                 android:gravity="center"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="DELETE"
+                android:text="@string/child_delete"
                 android:textColor="@color/app_red"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:visibility="visible"
-                app:fontName="OpenSans-Regular.ttf" />
+                app:fontName="open_sans.ttf" />
 
         </LinearLayout>
 
@@ -54,65 +54,96 @@
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/mainprofile_thin_border"
-            android:hint="Enter name"
+            android:hint="@string/profile_name_optional"
             android:inputType="textNoSuggestions"
             android:paddingLeft="15dp"
-            android:textColor="@color/app_light_black"
-            android:textSize="16dp"
-            app:fontName="oswald_regular.ttf" />
+            android:textColor="@color/campaign_4A4A4A"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:id="@+id/layoutKidsDOB"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="70dp"
             android:layout_marginTop="10dp">
 
-            <RelativeLayout
-                android:id="@+id/layoutExptectedDate"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight=".5">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spinnerGender"
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/textHeader1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/space_13"
+                    android:text="@string/rewards_gender"
+                    android:textSize="14sp"
+                    android:textColor="@color/campaign_expired_background"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RelativeLayout
+                    android:id="@+id/layoutExptectedDate"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/space_10">
+
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/spinnerGender"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/mainprofile_thin_border"
+                        android:gravity="center_vertical"
+                        android:hint="DD/MM/YYYY"
+                        android:textColor="@color/campaign_4A4A4A"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                    <ImageView
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_alignTop="@+id/spinnerGender"
+                        android:layout_alignRight="@id/spinnerGender"
+                        android:layout_alignBottom="@+id/editExpectedDate"
+                        android:layout_marginTop="14dp"
+                        android:layout_marginRight="11dp"
+                        android:layout_marginBottom="12dp"
+                        android:src="@drawable/arrowdownnew" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/textHeader2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/space_13"
+                    android:text="@string/dob"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/campaign_expired_background"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/textKidsDOB"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/layoutExptectedDate"
                     android:background="@drawable/mainprofile_thin_border"
                     android:gravity="center_vertical"
                     android:hint="DD/MM/YYYY"
-                    android:textColor="#000"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/campaign_4A4A4A"
 
-                    app:fontName="oswald_regular.ttf"
                     app:layout_constraintEnd_toEndOf="parent" />
-
-                <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_alignTop="@+id/spinnerGender"
-                    android:layout_alignRight="@id/spinnerGender"
-                    android:layout_alignBottom="@+id/editExpectedDate"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginRight="11dp"
-                    android:layout_marginBottom="12dp"
-                    android:src="@drawable/arrowdownnew" />
-            </RelativeLayout>
-
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/textKidsDOB"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@+id/layoutExptectedDate"
-                android:layout_weight=".5"
-                android:background="@drawable/mainprofile_thin_border"
-                android:gravity="center_vertical"
-                android:hint="DD/MM/YYYY"
-                android:paddingLeft="10dp"
-                android:textColor="#000"
-                app:fontName="oswald_regular.ttf"
-
-                app:layout_constraintEnd_toEndOf="parent" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
