--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_profile_setting.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_profile_setting.xml
@@ -221,7 +221,8 @@
                 android:drawablePadding="@dimen/space_20"
                 android:text="@string/report_spams"
                 android:textColor="@color/campaign_4A4A4A"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:visibility="gone"/>
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/about"
