--- a/MyCity4Kids/MyCity4Kids/res/layout/user_personal_info_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_personal_info_fragment.xml
@@ -128,6 +128,7 @@
                 android:paddingLeft="5dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:layout_toStartOf="@+id/changePasswordTextView"
                 android:textColor="@color/campaign_4A4A4A"
                 android:textSize="16sp" />
 
