Phone login OTP + analytics changes + notification center + bug fixes

--- a/MyCity4Kids/MyCity4Kids/res/layout/user_read_article_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_read_article_tab_fragment.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="You haven't read any articles"
+        android:text="@string/profile_empty_read_article"
         android:textColor="@color/empty_list_msg"
         android:textSize="16sp"
         android:visibility="gone"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="You haven't read any story"
+        android:text="@string/profile_empty_read_stories"
         android:textColor="@color/empty_list_msg"
         android:textSize="16sp"
         android:visibility="gone"
