--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -508,7 +508,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:orientation="vertical" >
+                        android:orientation="vertical">
 
                         <ImageView
                             android:layout_width="28dp"
@@ -1798,7 +1798,6 @@
                 android:drawablePadding="20dp"
                 android:drawableTint="#d54058"
                 android:gravity="center_vertical"
-
                 android:paddingLeft="30dp"
                 android:paddingTop="12dp"
                 android:paddingRight="16dp"
@@ -1823,6 +1822,7 @@
                 android:text="@string/app_settings"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
+                android:visibility="gone"
                 app:fontName="oswald.ttf" />
 
             <View
