--- a/MyCity4Kids/MyCity4Kids/res/layout/user_draft_article_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_draft_article_tab_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,6 +9,17 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/noBlogsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/profile_empty_drafts"
+        android:textColor="@color/empty_list_msg"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:fontName="oswald_regular.ttf" />
 
     <RelativeLayout
         android:id="@+id/relativeLoadingView"
