--- a/MyCity4Kids/MyCity4Kids/res/layout/user_seen_videos.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_seen_videos.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="You haven't seen any videos yet"
+        android:text="@string/profile_empty_seen_videos"
         android:textColor="@color/empty_list_msg"
         android:textSize="16sp"
         android:visibility="gone"
