--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -508,14 +508,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="28dp"
-                            android:layout_height="28dp"
-                            android:src="@drawable/navigation_create_button"
-                            android:visibility="visible" />
-                    </LinearLayout>
+                        android:orientation="vertical"/>
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -764,6 +757,13 @@
                         android:orientation="vertical"
                         android:visibility="visible">
 
+                        <ImageView
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:src="@drawable/navigation_create_button"
+                            android:visibility="visible" />
+
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -853,7 +853,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/menuVerticalLine"
-
                     android:layout_marginLeft="@dimen/space_10"
                     android:layout_marginRight="10dp"
                     android:background="@color/white"
