--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -776,7 +776,7 @@
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:drawableTop="@drawable/collectionadd"
+                    android:drawableTop="@drawable/ic_collection_add"
                     android:drawablePadding="2dp"
                     android:drawableTint="@color/app_red"
                     android:gravity="center"
