--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -170,21 +170,39 @@
 
             </RelativeLayout>
 
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:id="@+id/user_image"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+            <RelativeLayout
+                android:id="@+id/image_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/sponseredLayoutContainer"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:clickable="true"
-                android:src="@drawable/default_commentor_img"
-                app:civ_border="true"
-                app:civ_border_color="@color/white_color"
-                app:civ_border_width="0dp"
-                app:civ_shadow="true"
-                app:civ_shadow_color="@color/grey"
-                app:civ_shadow_radius="4" />
+                android:layout_marginTop="10dp">
+
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/user_image"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:clickable="true"
+                    android:src="@drawable/default_commentor_img"
+                    app:civ_border="true"
+                    app:civ_border_color="@color/white_color"
+                    app:civ_border_width="0dp"
+                    app:civ_shadow="true"
+                    app:civ_shadow_color="@color/grey"
+                    app:civ_shadow_radius="4" />
+
+                <ImageView
+                    android:id="@+id/crownImageView"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_alignBottom="@+id/user_image"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/profile_crown_bg"
+                    android:elevation="4dp"
+                    android:visibility="gone" />
+            </RelativeLayout>
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/user_name"
@@ -192,7 +210,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/sponseredLayoutContainer"
                 android:layout_marginTop="10dp"
-                android:layout_toRightOf="@+id/user_image"
+                android:layout_toRightOf="@+id/image_layout"
                 android:gravity="center"
                 android:paddingLeft="10dp"
                 android:paddingTop="5dp"
@@ -207,7 +225,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/user_name"
-                android:layout_toRightOf="@+id/user_image"
+                android:layout_toRightOf="@+id/image_layout"
                 android:paddingLeft="10dp"
                 android:paddingTop="2dp"
                 android:text="EDITOR"
@@ -233,7 +251,7 @@
                 android:id="@+id/webViewSeparator"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@+id/user_image"
+                android:layout_below="@+id/image_layout"
                 android:layout_marginTop="9dp"
                 android:layout_marginBottom="10dp"
                 android:background="@color/light_grey1" />
