--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -499,14 +499,13 @@
                 android:layout_marginTop="@dimen/space_20"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="14dp"
-                android:background="@drawable/campaign_mymoney_btn"
+                android:background="@drawable/campaign_earnupto_bg"
                 android:gravity="center"
                 android:lineSpacingExtra="2.6dp"
                 android:paddingTop="@dimen/space_10"
                 android:paddingBottom="@dimen/space_10"
-                android:text="@string/view_mymoney"
                 android:textAllCaps="true"
-                android:textColor="@color/white"
+                android:textColor="@color/color_2BAB56"
                 android:textSize="18sp"
                 app:fontName="oswald_regular.ttf"
                 app:layout_constraintEnd_toEndOf="parent"
