--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -499,6 +499,8 @@
     <color name="campaign_list_buttons_20">#20D03F56</color>
     <color name="campaign_expired_background">#9B9B9B</color>
     <color name="campaign_show_mymoney_btn">#56CD6A</color>
+    <color name="color_EEFAF0">#EEFAF0</color>
+    <color name="color_50CF65">#50CF65</color>
     <color name="campaign_refer_code_error">#D0021B</color>
     <color name="campaign_approved_rejected">#6FA138</color>
     <color name="campaign_feed_register">#23C9AC</color>
@@ -518,6 +520,7 @@
     <color name="my_money_earning_refer_earn_text">#4BD1B9</color>
     <color name="my_money_earning_rupee_symbol_bg">#F8BD16</color>
 
+    <color name="color_2BAB56">#2BAB56</color>
     <color name="color_979797">#979797</color>
     <color name="color_23CAAD">#23CAAD</color>
     <color name="color_F8FAFB">#F8FAFB</color>
