--- a/MyCity4Kids/MyCity4Kids/res/layout/ranking_info_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/ranking_info_tab_fragment.xml
@@ -10,14 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:background="@color/ranking.boxes_bg"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp">
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp">
 
         <RelativeLayout
             android:id="@+id/rankingContainer"
@@ -36,10 +36,8 @@
                 android:layout_width="54dp"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/yourRankLabel"
-                android:layout_marginEnd="33dp"
-                android:layout_marginRight="33dp"
                 android:layout_marginTop="7dp"
-                android:layout_toLeftOf="@+id/yourRankLabel"
+                android:layout_marginEnd="33dp"
                 android:layout_toStartOf="@+id/yourRankLabel"
                 android:gravity="center"
                 android:text="1"
@@ -57,16 +55,17 @@
                 android:text="@string/ranking.tabs_your_rank_label"
                 android:textColor="@color/ranking.your_rank_label"
                 android:textSize="25sp"
+                android:visibility="invisible"
                 app:fontName="oswald_regular.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/languageTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/yourRankLabel"
+                android:layout_marginTop="26dp"
                 android:layout_toEndOf="@+id/rankBgImageView"
-                android:layout_toRightOf="@+id/rankBgImageView"
-                android:text="IN ENGLISH"
+                android:gravity="center"
+                android:text=""
                 android:textColor="@color/ranking.language_selected"
                 android:textSize="21sp" />
         </RelativeLayout>
@@ -77,28 +76,28 @@
         android:id="@+id/underline1"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
-        android:layout_alignEnd="@+id/rankContainer"
-        android:layout_alignLeft="@+id/rankContainer"
-        android:layout_alignRight="@+id/rankContainer"
-        android:layout_alignStart="@+id/rankContainer"
         android:layout_below="@+id/rankContainer"
+        android:layout_alignStart="@+id/rankContainer"
+        android:layout_alignLeft="@+id/rankContainer"
+        android:layout_alignEnd="@+id/rankContainer"
+        android:layout_alignRight="@+id/rankContainer"
         android:background="@color/common_underline" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/improveRankTextView"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_alignEnd="@+id/rankContainer"
-        android:layout_alignLeft="@+id/rankContainer"
-        android:layout_alignRight="@+id/rankContainer"
-        android:layout_alignStart="@+id/rankContainer"
         android:layout_below="@+id/underline1"
+        android:layout_alignStart="@+id/rankContainer"
+        android:layout_alignLeft="@+id/rankContainer"
+        android:layout_alignEnd="@+id/rankContainer"
+        android:layout_alignRight="@+id/rankContainer"
         android:background="@color/ranking.boxes_bg"
         android:gravity="center_vertical"
-        android:paddingEnd="20dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
         android:paddingStart="20dp"
+        android:paddingLeft="20dp"
+        android:paddingEnd="20dp"
+        android:paddingRight="20dp"
         android:text="@string/ranking.how_calculated"
         android:textColor="@color/ranking.how_calculated"
         android:textSize="15sp"
@@ -119,11 +118,11 @@
         android:layout_height="40dp"
         android:layout_below="@+id/underline2"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:drawableEnd="@drawable/ic_down_arrow"
-        android:drawablePadding="10dp"
         android:drawableRight="@drawable/ic_down_arrow"
+        android:drawablePadding="10dp"
         android:gravity="center_vertical"
         android:text="@string/ranking.top_bloggers"
         android:textColor="@color/ranking.top_bloggers"
@@ -155,12 +154,12 @@
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_alignBottom="@+id/rank1BloggerImageView"
             android:layout_alignEnd="@+id/rank1BloggerImageView"
             android:layout_alignRight="@+id/rank1BloggerImageView"
-            android:layout_marginBottom="2dp"
+            android:layout_alignBottom="@+id/rank1BloggerImageView"
             android:layout_marginEnd="2dp"
             android:layout_marginRight="2dp"
+            android:layout_marginBottom="2dp"
             android:background="@drawable/circular_textview_ranking"
             android:elevation="4dp"
             android:gravity="center"
@@ -173,11 +172,11 @@
             android:id="@+id/rank1BloggerNameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/rank1BloggerImageView"
-            android:layout_alignLeft="@+id/rank1BloggerImageView"
-            android:layout_alignRight="@+id/rank1BloggerImageView"
-            android:layout_alignStart="@+id/rank1BloggerImageView"
             android:layout_below="@+id/rank1BloggerImageView"
+            android:layout_alignStart="@+id/rank1BloggerImageView"
+            android:layout_alignLeft="@+id/rank1BloggerImageView"
+            android:layout_alignEnd="@+id/rank1BloggerImageView"
+            android:layout_alignRight="@+id/rank1BloggerImageView"
             android:gravity="center"
             android:text="Kainat Khan"
             android:textColor="@color/ranking.author_name"
@@ -188,11 +187,11 @@
             android:id="@+id/rank1FollowersCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/rank1BloggerImageView"
-            android:layout_alignLeft="@+id/rank1BloggerImageView"
-            android:layout_alignRight="@+id/rank1BloggerImageView"
-            android:layout_alignStart="@+id/rank1BloggerImageView"
             android:layout_below="@+id/rank1BloggerNameTV"
+            android:layout_alignStart="@+id/rank1BloggerImageView"
+            android:layout_alignLeft="@+id/rank1BloggerImageView"
+            android:layout_alignEnd="@+id/rank1BloggerImageView"
+            android:layout_alignRight="@+id/rank1BloggerImageView"
             android:gravity="center"
             android:text="1000 followers"
             android:textColor="@color/ranking.follower_count"
@@ -203,8 +202,8 @@
             android:id="@+id/rank2BloggerImageView"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginLeft="50dp"
             android:layout_marginStart="50dp"
+            android:layout_marginLeft="50dp"
             android:layout_toEndOf="@+id/rank1BloggerImageView"
             android:layout_toRightOf="@+id/rank1BloggerImageView"
             android:src="@drawable/default_article" />
@@ -212,12 +211,12 @@
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_alignBottom="@+id/rank2BloggerImageView"
             android:layout_alignEnd="@+id/rank2BloggerImageView"
             android:layout_alignRight="@+id/rank2BloggerImageView"
-            android:layout_marginBottom="2dp"
+            android:layout_alignBottom="@+id/rank2BloggerImageView"
             android:layout_marginEnd="2dp"
             android:layout_marginRight="2dp"
+            android:layout_marginBottom="2dp"
             android:background="@drawable/circular_textview_ranking"
             android:elevation="4dp"
             android:gravity="center"
@@ -230,11 +229,11 @@
             android:id="@+id/rank2BloggerNameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/rank2BloggerImageView"
-            android:layout_alignLeft="@+id/rank2BloggerImageView"
-            android:layout_alignRight="@+id/rank2BloggerImageView"
-            android:layout_alignStart="@+id/rank2BloggerImageView"
             android:layout_below="@+id/rank2BloggerImageView"
+            android:layout_alignStart="@+id/rank2BloggerImageView"
+            android:layout_alignLeft="@+id/rank2BloggerImageView"
+            android:layout_alignEnd="@+id/rank2BloggerImageView"
+            android:layout_alignRight="@+id/rank2BloggerImageView"
             android:gravity="center"
             android:text="Kainat Khan"
             android:textColor="@color/ranking.author_name"
@@ -244,11 +243,11 @@
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/rank2BloggerImageView"
-            android:layout_alignLeft="@+id/rank2BloggerImageView"
-            android:layout_alignRight="@+id/rank2BloggerImageView"
-            android:layout_alignStart="@+id/rank2BloggerImageView"
             android:layout_below="@+id/rank2BloggerNameTV"
+            android:layout_alignStart="@+id/rank2BloggerImageView"
+            android:layout_alignLeft="@+id/rank2BloggerImageView"
+            android:layout_alignEnd="@+id/rank2BloggerImageView"
+            android:layout_alignRight="@+id/rank2BloggerImageView"
             android:gravity="center"
             android:text="1000 followers"
             android:textColor="@color/ranking.follower_count"
