mvlog coach mark visible

--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -279,7 +279,7 @@
             android:layout_marginRight="@dimen/space_10"
             android:layout_marginBottom="@dimen/space_20"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/tapToCreateTextView"
