--- a/MyCity4Kids/MyCity4Kids/res/layout/user_followed_collections_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_followed_collections_fragment.xml
@@ -52,4 +52,11 @@
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
+    <include
+        android:id="@+id/bottomLoadingView"
+        layout="@layout/bottom_loading_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
