--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_badge.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_badge.xml
@@ -57,17 +57,17 @@
 
     <GridView
         android:id="@+id/gridview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
         android:layout_marginLeft="@dimen/space_20"
-        android:layout_marginTop="@dimen/space_20"
+        android:layout_marginTop="@dimen/space_10"
         android:layout_marginRight="@dimen/space_20"
         android:gravity="center"
         android:horizontalSpacing="@dimen/space_10"
         android:numColumns="2"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/space_20"
+        android:verticalSpacing="@dimen/space_10"
         android:visibility="visible" />
 
     <ProgressBar
