--- a/MyCity4Kids/MyCity4Kids/res/layout/user_created_collections_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_created_collections_fragment.xml
@@ -32,7 +32,6 @@
         android:visibility="gone" />
 
 
-
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer1"
         android:layout_width="match_parent"
@@ -55,6 +54,11 @@
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
-
+    <include
+        android:id="@+id/bottomLoadingView"
+        layout="@layout/bottom_loading_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
