--- a/MyCity4Kids/MyCity4Kids/res/layout/video_challenge_detail_listing_header.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_challenge_detail_listing_header.xml
@@ -4,8 +4,8 @@
     android:id="@+id/rootChallengeHeaderContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp">
 
     <RelativeLayout
         android:id="@+id/challenge_header_text"
@@ -20,14 +20,15 @@
             android:id="@+id/main_media_frame"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:visibility="visible"
-            android:background="#000000">
+            android:background="#000000"
+            android:visibility="visible">
 
-            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+            <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/exoplayerChallengeDetailListing"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center" />
+                android:gravity="center"
+                app:controller_layout_id="@layout/custom_exo_playback_control_view" />
 
         </FrameLayout>
 
@@ -35,8 +36,8 @@
             android:id="@+id/videoIndicatorImageView"
             android:layout_width="70dp"
             android:layout_height="65dp"
-            android:layout_marginTop="80dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="80dp"
             android:src="@drawable/ic_videos"
             android:visibility="gone" />
 
@@ -53,31 +54,31 @@
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/ChallengeNameText"
                 android:layout_width="0dp"
-                android:layout_weight="6"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="6"
                 android:background="@color/white"
+                android:ellipsize="end"
+                android:paddingRight="10dp"
                 android:textColor="@color/app_red"
                 android:textSize="25sp"
                 android:visibility="visible"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:ellipsize="end"
-                android:layout_marginLeft="10dp"
-                android:paddingRight="10dp"
                 app:fontName="oswald.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/submit_story_text"
                 android:layout_width="0dp"
-                android:layout_weight="2"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_weight="2"
                 android:background="@drawable/update_profile_bg"
                 android:gravity="center"
                 android:paddingLeft="12dp"
                 android:paddingTop="7dp"
                 android:paddingRight="12dp"
                 android:paddingBottom="7dp"
-                android:layout_marginRight="10dp"
                 android:text="@string/add"
                 android:textColor="@color/white"
                 android:textSize="18sp"
