--- a/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
@@ -378,7 +378,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/userbioTextView"
                 android:background="@drawable/shape_round_rectangle"
-                android:visibility="invisible">
+                android:visibility="visible">
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/profileCompletionLabel"
