--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -545,4 +545,9 @@
     <color name="color_CB9797">#CB9797</color>
     <color name="color_787E85">#787E85</color>
     <color name="color_666666">#666666</color>
+    <color name="color_49D6BE">#49D6BE</color>
+    <color name="color_0EA095">#0EA095</color>
+    <color name="color_FFFFFF96">#FFFFFF96</color>
+    <color name="color_FFFFFF80">#FFFFFF80</color>
+    <color name="color_B4ECE4">#B4ECE4</color>
 </resources>
